# KeyValue-store

./: .gitignore  CMakeLists.txt  README.md
include/cache/: ICache.h  config.h  facade.h  generic_cache.h
include/cache/eviction/: Policy.h  lru.h
src/: config.cpp
tests/: testCache.cpp
